--- a/task1/task1.html
+++ b/task1/task1.html
@@ -49,6 +49,12 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
+    <!-- Component Scripts -->
+    <script src="components/NameTest.js"></script>
+    <script src="components/PostManagement.js"></script>
+    <script src="components/StudentMarks.js"></script>
+    
+    <!-- Main App Script -->
     <script src="app.js"></script>
 </body>
 </html>
